[gd_scene format=3 uid="uid://mmaofh5vgnaw"]

[ext_resource type="PackedScene" uid="uid://bi4a01h1dar48" path="res://assets/scenes/soup_pot.tscn" id="1_cb66b"]
[ext_resource type="Script" uid="uid://dcch4ywrs5j5c" path="res://assets/scripts/serving_tray.gd" id="1_lr0kx"]
[ext_resource type="Texture2D" uid="uid://c8rsdxmpmmkdy" path="res://assets/sprites/counter.png" id="2_cb5na"]
[ext_resource type="PackedScene" uid="uid://b2i7f2fq83alc" path="res://assets/scenes/plate.tscn" id="2_dis88"]
[ext_resource type="FontFile" uid="uid://c82v6nnwr2qvs" path="res://assets/fonts/fonts/connection/ConnectionBold.otf" id="2_j62u1"]

[node name="Level1" type="Node2D" unique_id=1905470012]
script = ExtResource("1_lr0kx")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1602586567]

[node name="VictoryLabel" type="Label" parent="CanvasLayer" unique_id=737412138]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -87.5
offset_right = 20.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(4.813075e-07, 0.9971004, 0.36168903, 1)
theme_override_fonts/font = ExtResource("2_j62u1")
theme_override_font_sizes/font_size = 128
horizontal_alignment = 1
vertical_alignment = 1

[node name="KitchenButton" type="Button" parent="CanvasLayer" unique_id=93452836]
anchors_preset = -1
anchor_right = 0.15972222
anchor_bottom = 0.11574074
offset_left = 16.0
offset_top = 16.0
offset_right = 26.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_j62u1")
theme_override_font_sizes/font_size = 48
text = "Kitchen"
metadata/_edit_use_anchors_ = true

[node name="MainMenuButton" type="Button" parent="CanvasLayer" unique_id=1682535892]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = 80.5
offset_right = 128.5
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_j62u1")
theme_override_font_sizes/font_size = 48
text = "Main Menu"

[node name="NextLevelButton" type="Button" parent="CanvasLayer" unique_id=318150521]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = 149.5
offset_right = 127.0
offset_bottom = 206.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_j62u1")
theme_override_font_sizes/font_size = 48
text = "Next Level"

[node name="PauseOverlay" type="ColorRect" parent="CanvasLayer" unique_id=1463441654]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0.1254902, 0.1254902, 0.1254902, 0.8352941)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PauseOverlay" unique_id=552026464]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseOverlay/CenterContainer" unique_id=119564408]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/PauseOverlay/CenterContainer/VBoxContainer" unique_id=1848604535]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j62u1")
theme_override_font_sizes/font_size = 72
text = "Paused"

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseOverlay/CenterContainer/VBoxContainer" unique_id=1711699946]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j62u1")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="MenuButton" type="Button" parent="CanvasLayer/PauseOverlay/CenterContainer/VBoxContainer" unique_id=1411920362]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j62u1")
theme_override_font_sizes/font_size = 32
text = "Main
Menu"

[node name="Counter" type="Sprite2D" parent="." unique_id=1227554935]
position = Vector2(-3.0517578e-05, 0)
scale = Vector2(1.024, 1.08)
texture = ExtResource("2_cb5na")

[node name="Camera2D" type="Camera2D" parent="Counter" unique_id=734574848]
position = Vector2(8.940696e-05, -1.3190287e-05)
scale = Vector2(4.882812, 4.6296296)
zoom = Vector2(0.75, 0.75)

[node name="Plate" parent="." unique_id=1489769611 instance=ExtResource("2_dis88")]
position = Vector2(425.00006, -59.00003)
scale = Vector2(2.6, 2.6)

[node name="SoupPot" parent="." unique_id=238947446 instance=ExtResource("1_cb66b")]
position = Vector2(-319.99994, 28.999975)
scale = Vector2(5, 5)

[node name="Words" type="Node" parent="." unique_id=367841244]

[connection signal="pressed" from="CanvasLayer/PauseOverlay/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseOverlay/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
